# TNFSH-Classtable

./: .gitattributes  .gitignore  .windsurfrules  123.py  README.md  app.py  cache_updater.py  class_101.csv  class_101.ics  class_101.json  class_103.json  class_107.csv  class_107.ics  class_219.csv  class_219.ics  class_307.csv  class_307.html  class_307.ics  class_307.json  class_313.ics  pyproject.toml  requirement.txt  requirements.txt  run.py  tnfsh-classtable-alpha.ipynb
.github/workflows/: check_file_size.yml  main.yml
assests/: 班級課表.html
tests/: animate.py  rotation.py  swap.py  test_class_table.py  test_new_wiki_teacher_index.py  test_rotation.py  test_rotation_course.py  test_swap.py  test_swap_course.py
tests/model/: node.py  rotation.py  swap.py
tnfsh_class_table/: ai_assistant.py  ai_tools.py  backend.py  change_class.py  depth_1_change_course.py  interface.py  main.py  models.py
tnfsh_class_table/ai_tools/: current_time.py  scheduling.py
tnfsh_class_table/ai_tools/index/: class_table_index_base_url.py  index.py  timetable_index.py  timetable_official_website_url.py
tnfsh_class_table/ai_tools/scheduling/: cache.py  models.py  rotation.py  substitute.py  swap.py
tnfsh_class_table/ai_tools/system/: current_time.py  self_introduction.py  system_instruction.py
tnfsh_class_table/model/: class_table.py  node.py  utils.py
tnfsh_class_table/new_backend/: cache.py  crawler.py  models.py
tnfsh_class_table/utils/: log_func.py
wiki/: Gradiointerface.md  NewWikiIndex.md  TNFSHClassTable.md  TNFSHClassTableIndex.md  wiki_index.md
(+26 files in other folders)
