[project]
name = "tnfsh-class-table"
version = "0.1.0"
description = ""
authors = [
    {name = "Skywind5487",email = "skywind5487@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "gradio (>=5.21.0,<6.0.0)",
    "icalendar (==5.0.11)",
    "google>=3.0.0",
    "google-genai>=1.8.0",
    "networkx>=3.4.2",
    "tnfsh-timetable-core>=0.0.6",
    "pytest-asyncio>=1.0.0",
    "nest-asyncio>=1.6.0",
    "tnfsh-wiki-teachers-core>=0.0.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

